<resources>
    <string name="app_name">Admin Aplikasi UMKM Sambongrejo </string>
    <string name="product">Product</string>
    <string name="user">User</string>
    <string name="nama">Hanif Ridho</string>
    <string name="nim">A11.2019.12203</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="cpright">©2021</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_product">Save product</string>
    <string name="edit_product">Edit product</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="name_product">Name Product</string>
    <string name="save_new_product">Save new product</string>
    <string name="id">ID</string>
    <string name="titik_dua">:</string>
    <string name="_1233">1233</string>
    <string name="name">Name</string>
    <string name="example_name">ABCD</string>
    <string name="rp_12_000">Rp 12.000</string>
    <string name="example_title">Nasi Goreng</string>
    <string name="log_out">Log Out</string>
    <string name="laporan_penjualan_global">Laporan Penjualan Global</string>
    <string name="laporan_penjualan_periodik">Laporan Penjualan Periodik</string>
    <string name="image_product">Image Product</string>
    <string name="save_new_konsumen">Save new Konsumen</string>
    <string name="name_konsumen">Name Konsumen</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="save_data">Save Data</string>
    <string name="id_transaksi">ID transaksi</string>
    <string name="id_konsumen">ID konsumen</string>
    <string name="tanggal_beli">Tanggal Beli</string>
    <string name="quantity">Quantity</string>
    <string name="cetak_laporan">Cetak Laporan</string>
    <string name="year">Year</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>