<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:id="@+id/card_user"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">
   <RelativeLayout
       android:padding="20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:id="@+id/layout_id"
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           tools:ignore="UselessParent">
           <TextView
               android:id="@+id/textview1"
               android:text="@string/id"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/textview2"
               android:layout_marginStart="83dp"
               android:text="@string/titik_dua"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/tv_id"
               android:text="@string/_1233"
               android:layout_marginStart="20dp"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <LinearLayout
           android:layout_marginTop="10dp"
           android:layout_below="@id/layout_id"
           android:id="@+id/layout_name"
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           tools:ignore="UselessParent">
           <TextView
               android:id="@+id/textview3"
               android:text="@string/name"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/textview4"
               android:layout_marginStart="48dp"
               android:text="@string/titik_dua"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/tv_name"
               android:text="@string/example_name"
               android:layout_marginStart="20dp"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <LinearLayout
           android:layout_marginTop="10dp"
           android:layout_below="@id/layout_name"
           android:id="@+id/layout_username"
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           tools:ignore="UselessParent">
           <TextView
               android:id="@+id/textview5"
               android:text="@string/username"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/textview6"
               android:layout_marginStart="14dp"
               android:text="@string/titik_dua"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/tv_username"
               android:text="@string/example_name"
               android:layout_marginStart="20dp"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <LinearLayout
           android:layout_marginTop="10dp"
           android:layout_below="@id/layout_username"
           android:id="@+id/layout_gender"
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           tools:ignore="UselessParent">
           <TextView
               android:id="@+id/textview7"
               android:text="@string/gender"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/textview8"
               android:layout_marginStart="38dp"
               android:text="@string/titik_dua"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/tv_gender"
               android:text="@string/example_name"
               android:layout_marginStart="20dp"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>
       <LinearLayout
           android:layout_marginTop="10dp"
           android:layout_below="@id/layout_gender"
           android:id="@+id/layout_address"
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           tools:ignore="UselessParent">
           <TextView
               android:id="@+id/textview9"
               android:text="@string/address"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/textview10"
               android:layout_marginStart="30dp"
               android:text="@string/titik_dua"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/tv_address"
               android:text="@string/example_name"
               android:layout_marginStart="20dp"
               android:textSize="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>
   </RelativeLayout>
</androidx.cardview.widget.CardView>