<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_id"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/textviewId"
                android:text="@string/id_transaksi"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textview2"
                android:layout_marginStart="20dp"
                android:text="@string/titik_dua"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_id_transaksi"
                android:text="@string/_1233"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@id/layout_id"
            android:id="@+id/layout_id_konsumen"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/textviewIdKonsumen"
                android:text="@string/id_konsumen"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textview5"
                android:layout_marginStart="10dp"
                android:text="@string/titik_dua"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_id_konsumen"
                android:text="@string/_1233"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@id/layout_id_konsumen"
            android:id="@+id/layout_name_konsumen"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/textview3"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textview4"
                android:layout_marginStart="73dp"
                android:text="@string/titik_dua"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_name_konsumen"
                android:text="@string/example_name"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@id/layout_name_konsumen"
            android:id="@+id/layout_name_product"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/textviewNameProduct"
                android:text="@string/product"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textview6"
                android:layout_marginStart="57dp"
                android:text="@string/titik_dua"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_name_product"
                android:text="@string/example_name"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@id/layout_name_product"
            android:id="@+id/layout_tgl_beli"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/textviewTglBeli"
                android:text="@string/tanggal_beli"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textview7"
                android:layout_marginStart="18dp"
                android:text="@string/titik_dua"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_tgl_beli"
                android:text="@string/example_name"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@id/layout_tgl_beli"
            android:id="@+id/layout_qty"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/textviewQty"
                android:text="@string/quantity"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textview8"
                android:layout_marginStart="53dp"
                android:text="@string/titik_dua"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_qty"
                android:text="@string/_1233"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>