<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.form.FormAddEditKonsumen">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_form_konsumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_new_konsumen"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <RelativeLayout
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/title_form_konsumen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name_konsumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/eName_konsumen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="false"
                    android:hint="@string/name_konsumen"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/input_layout_name_konsumen"
                android:id="@+id/input_layout_username_konsumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/eUsername_konsumen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="false"
                    android:hint="@string/username"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/input_layout_username_konsumen"
                android:id="@+id/input_layout_password_konsumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/purple_500">

                <EditText
                    android:id="@+id/etPassword_konsumen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="false"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/input_layout_password_konsumen"
                android:id="@+id/input_layout_address_konsumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/eAddress_konsumen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="false"
                    android:hint="@string/address"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:layout_below="@id/input_layout_address_konsumen"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:id="@+id/gender_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:entries="@array/gender_array"
                android:prompt="@string/gender"/>

            <Button
                android:id="@+id/btnSaveKonsumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender_select"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="100dp"
                android:background="@color/purple_700"
                android:text="@string/save_data"
                android:textColor="@color/white" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>